Fixed Vertical Scrollbar Jumping Issue

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 html {
 	font-family: "Droid Sans", sans-serif;
 	background-color: #171f24;
+	overflow-y: scroll;
 }
 
 body {
